# aword

./: .gitignore  LICENSE  README.md  config.ini  pyproject.toml  setup.py
aword/: app.py  chat.py  chunk.py  config.py  embed.py  errors.py  logger.py  payload.py  segment.py  slackbot.py  tools.py
aword/apis/: oai.py  qdrant.py
aword/cache/: __init__.py  cache.py  edge.py
aword/chat/: chat.py  chatsqlite.py
aword/chatdb/: chatdb.py  chatsqlite.py
aword/embedding/: model.py
aword/model/: embedder.py  persona.py  respondent.py  summarizer.py
aword/source/: local.py  notion.py  plain.py  state.py  website.py
aword/source/parser/: markdown.py  notion.py  orgmode.py
aword/sources/: __init__.py  crowddev.py  linear.py  local.py  markdown.py  notion.py  orgmode.py  plain.py  state.py
aword/vector/: fields.py  store.py
prompts/: 0-system.txt  1-data.txt
res/: slack-manifest.yml  system-prompt-chat.txt  system-prompt-summary.txt  system-prompt.txt
res/dev/: config.ini  models.json  personas.json  respondents.json  sources.json  system-prompt-expert.txt
res/dev/local.qdrant/: meta.json
res/test/: config.ini  sources.json
res/test/local/: butterfly-biology.md  butterfly-species.md  leprechauns.md
test/: conftest.py  test_cache.py  test_chat.py  test_chatdb.py  test_edge.py  test_embedding.py  test_local.py  test_markdown.py  test_notion.py  test_orgmode.py  test_prompt.py  test_store.py
test/res/: config.ini  edge.db3s  models.json  respondents.json  sources.json  system-prompt-summary.txt
utils/: init-test.sh  qdrant-init.py
(+5 files in other folders)
